DDI-Lifecycle/3.3/model/_sources/composite-types/DateType/index.rst.txt
DateType
--------

Provides the structure of a Date element, which allows a choice between single, simple dates (of BaseDateType) or date ranges. If the Date element contains a range, Cycle may be used to indicate occurrence of this range within a series of ranges as an integer identifying the cycle, i.e. the 4th wave of a data collection cycle would have 4. ISO-formatted dates are required for all standard date fields; a historically-formatted date may also be provided to reflect the specific content of a legacy document or common practice within an agency or for publication. All uses of DateType should be optional.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "SimpleDate","cogsDate","0..1","A single point in time. If a duration is expressed as a SimpleDate it is defining a period of time without a designated Start or End date."
   "HistoricalDate",":doc:`/composite-types/HistoricalDateType/index`","0..1","A simple date expressed in a historical date format, including a specification of the date format and calendar used."
   "StartDate","cogsDate","0..1","Start of a date range. If there is a start date with no end date provided, this implies that the end date is unknown but that the date being recorded is not just a simple date but a range of unknown duration."
   "HistoricalStartDate",":doc:`/composite-types/HistoricalDateType/index`","0..1","A start date expressed in a historical date format, including a specification of the date format and calendar used."
   "EndDate","cogsDate","0..1","End of a date range with a known start date."
   "HistoricalEndDate",":doc:`/composite-types/HistoricalDateType/index`","0..1","An end date expressed in a historical date format, including a specification of the date format and calendar used."
   "Cycle","int","0..1","Use to indicate occurrence of this range within a series of ranges as an integer identifying the cycle, i.e. the 4th wave of a data collection cycle would have 4."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* **DateType**
    * :doc:`/composite-types/AccessRestrictionDateType/index`
    * :doc:`/composite-types/DataCollectionFrequencyType/index`
    * :doc:`/composite-types/ReferenceDateType/index`


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/ApprovalReview/index`
* :doc:`/item-types/DevelopmentResults/index`
* :doc:`/item-types/DevelopmentStep/index`
* :doc:`/item-types/Relation/index`
* :doc:`/item-types/Sample/index`
* :doc:`/item-types/SampleFrame/index`
* :doc:`/item-types/Universe/index`
* :doc:`/composite-types/AdditionalInformationType/index`
* :doc:`/composite-types/AddressType/index`
* :doc:`/composite-types/ApplicationDetailsType/index`
* :doc:`/composite-types/CitationType/index`
* :doc:`/composite-types/CollectionEventType/index`
* :doc:`/composite-types/DefiningCharacteristicType/index`
* :doc:`/composite-types/EmailType/index`
* :doc:`/composite-types/EmbargoType/index`
* :doc:`/composite-types/FundingInformationType/index`
* :doc:`/composite-types/GeographicBoundaryType/index`
* :doc:`/composite-types/IndividualLanguageType/index`
* :doc:`/composite-types/IndividualNameType/index`
* :doc:`/composite-types/InstantMessagingType/index`
* :doc:`/composite-types/LifecycleEventType/index`
* :doc:`/composite-types/LocationNameType/index`
* :doc:`/composite-types/LocationValueBundleType/index`
* :doc:`/composite-types/LocationValueType/index`
* :doc:`/composite-types/OrganizationNameType/index`
* :doc:`/composite-types/PrivateImageType/index`
* :doc:`/composite-types/ResearcherIDType/index`
* :doc:`/composite-types/ResultDetailType/index`
* :doc:`/composite-types/RoleType/index`
* :doc:`/composite-types/SoftwareType/index`
* :doc:`/composite-types/TelephoneType/index`
* :doc:`/composite-types/VersionDistinctionType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/DateType.svg

